--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,11 @@ body .grama-background {
     max-width: 50%;
     height: auto;
 }
+
+.foto-moldura {
+  border: 10px solid white;
+  border-radius: 5px; 
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 5px; 
+  display: inline-block;
+}
